@@ -5,11 +5,7 @@ ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
 
 
 # Set up subdirectories to traverse
-SUBDIRS = gxml test po examples debian
-
-if ENABLE_DOCS
-SUBDIRS += docs
-endif
+SUBDIRS = gxml test po examples debian docs
 
 # Define available flags
 DISTCHECK_CONFIGURE_FLAGS = \
