@@ -3,6 +3,7 @@
 Version 0.13.0
 ===============
 
+* Enable documentation generation by default
 * Added XPath interfaces and initial implementation based on libxml2
 * Removed old DOM1 implementation on xNode/xDocument
 * API change on DomImplementation.with_ids () for DocumentType to DomDocumentType
